--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,71 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     line-height: 1.6;
-    color: #831313;
-    background-color: #f9f9f9;
+    background-color: #f9f7fe;
     padding: 20px;
 }
 
 h1 {
-    font-size: 2.5rem;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 36px;
+}
+
+h2{
+    margin: 0 0 5px;
+    font-size: 28px;
+    
+}
+
+select{
+    display: block;
+    width: 100%;
+    border-radius: 4px;
+    margin: 20px auto;
+    padding: 10px;
+    font-size: 18px;
+
+}
+
+.container {
+    max-width: 600px;
+    background-color: white;
+    padding: 30px;
+    margin: 60px auto;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 10px;
+}
+
+.city{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+    padding: 30px 0;
+}
+
+.city:last-child{
+    border: none;
+}
+
+.time{
+    font-size: 48px;
     font-weight: bold;
-    margin-bottom: 1rem;
+}
+
+.time small{
+    font-size: 24px;
+    line-height: 48px;
+    vertical-align: middle;
+}
+
+.date{
+    opacity: 0.7;
+}
+
+footer {
+    text-align: center;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.8);
 }
 
