Change background color to #cdc7e0

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
     line-height: 1.6;
-    background-color: #f9f7fe;
+    background-color: #cdc7e0;
     padding: 20px;
 }
 
